Add employee deletion endpoint
